# iris-installer

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  style.css  types.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  quilt.rs  structs.rs
src/components/: ExternalLink.tsx  Titlebar.tsx
src/components/icons/: ArrowRight.tsx  ArrowTopRight.tsx  X.tsx
