[package]
authors = ["CarbonGhost"]
description = "Iris Installer"
edition = "2021"
license = "MIT"
name = "iris-installer"
repository = ""
rust-version = "1.57"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
ferinth = "2.7.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "1.2", features = ["shell-open", "window-all"] }
window-shadows = "0.2.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1   # Compile crates one after another so the compiler can optimize better
lto = true          # Enables link to optimizations
opt-level = "s"     # Optimize for binary size
panic = "abort"     # Strip expensive panic clean-up logic
strip = true        # Remove debug symbols
